add_executable(wf_event_loop_test1 wf_event_loop_test1.cc)
target_link_libraries(wf_event_loop_test1 winterfell_net winterfell_base winterfell_util)

add_executable(wf_event_loop_test2 wf_event_loop_test2.cc)
target_link_libraries(wf_event_loop_test2 winterfell_net winterfell_base winterfell_util)

add_executable(wf_timer_queue_test wf_timer_queue_test.cc)
target_link_libraries(wf_timer_queue_test winterfell_net winterfell_base winterfell_util)